bk_ida/gccida/c0/assign_parms
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/assign_parms/src/function.c:4765:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v2; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/assign_parms/src/function.c:4767:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v4; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/assign_parms/src/function.c:4768:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v5; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/assign_parms/src/function.c:4769:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v6; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/assign_parms/src/function.c:4772:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v9; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/assign_parms/src/function.c:4784:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *tree; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/assign_parms/src/function.c:4795:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v32; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/assign_parms/src/function.c:4797:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v34; // [rsp+28h] [rbp-418h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/assign_parms/src/function.c:4798:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v35; // [rsp+30h] [rbp-410h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/assign_parms/src/function.c:4801:7: error: use of undeclared identifier 'v38'
tree *v38; // [rsp+68h] [rbp-3D8h] 
      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/assign_parms/src/function.c:4802:5: error: expected ';' after expression
tree v39; // [rsp+70h] [rbp-3D0h] 
    ^
    ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/assign_parms/src/function.c:4802:6: error: use of undeclared identifier 'v39'
tree v39; // [rsp+70h] [rbp-3D0h] 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/assign_parms/src/function.c:4803:7: error: use of undeclared identifier 'v40'
tree *v40; // [rsp+80h] [rbp-3C0h] 
      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/assign_parms/src/function.c:4804:5: error: expected ';' after expression
tree v41; // [rsp+88h] [rbp-3B8h] 
    ^
    ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/assign_parms/src/function.c:4804:6: error: use of undeclared identifier 'v41'
tree v41; // [rsp+88h] [rbp-3B8h] 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/assign_parms/src/function.c:4805:7: error: use of undeclared identifier 'regno_decl'
tree *regno_decl; // [rsp+A0h] [rbp-3A0h] 
      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/assign_parms/src/function.c:4806:5: error: expected ';' after expression
tree v43; // [rsp+A8h] [rbp-398h] 
    ^
    ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/assign_parms/src/function.c:4806:6: error: use of undeclared identifier 'v43'
tree v43; // [rsp+A8h] [rbp-398h] 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/assign_parms/src/function.c:4816:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *to; // [rsp+188h] [rbp-2B8h] 
^
union 
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/assign_parms/src/obj/function.o] Error 1
